Corrección con el guardado de llave